petname (1.1) unreleased; urgency=medium

  * debian/copyright, README.md:
    - update readme, add local location of license

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 16 Dec 2014 12:33:51 -0600

petname (1.0-0ubuntu1) vivid; urgency=medium

  * === added directory usr, === added directory usr/bin, === added
    directory usr/lib, === added directory usr/lib/petname,
    adjectives.txt => usr/lib/petname/adjectives.txt, adverbs.txt =>
    usr/lib/petname/adverbs.txt, cmd/petname/main.go, debian/control,
    debian/golang-petname-dev.install, debian/petname.install,
    debian/python-petname.install, debian/rules, __init__.py, Makefile,
    names.txt => usr/lib/petname/names.txt, petname.go, petname.go.in,
    petname/petname.py, petname/petname.py.in, petname_test.go, ===
    removed directory cmd, === removed directory cmd/petname, ===
    removed directory petname, === removed directory src, === removed
    directory src/github.com, === removed directory
    src/github.com/dustinkirkland, === removed symlink
    src/github.com/dustinkirkland/petname, setup.py, === target was
    u../../../, update.sh, usr/bin/petname:
    - initial repackaging
  * usr/bin/petname:
    - sh is fine, not using bash
  * usr/lib/petname/adverbs.txt, usr/lib/petname/names.txt:
    - fix up a few words
  * debian/rules, LICENSE:
    - add a license, and a test for the word lists
  * === added directory usr/share, === added directory usr/share/man,
    === added directory usr/share/man/man1,
    usr/share/man/man1/petname.1:
    - add a manpage, update the README
  * README.md:
    - update readme, add code examples
  * usr/lib/petname/adjectives.txt, usr/lib/petname/names.txt:
    - fix sorting, add a few words and names

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 16 Dec 2014 12:33:49 -0600