@@ -17,4 +17,3 @@ License: Apache-2
  limitations under the License.
  On Debian systems, the complete text of the Apache version 2.0 license
  can be found in "/usr/share/common-licenses/Apache-2.0".
-
