@@ -1,0 +1,2 @@
+usr/
+README.md usr/share/doc/petname/
